# HairNet_DataSetGeneration

./: HairMix_run  README  license.md  rootPosition_new.txt
Hair_generate_convdata_and_imgs/: CMakeLists.txt  HairHelper.h  Renderer.h  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  TrainingDataGenerator.h  lineqn.h  main.cpp
Hair_generate_convdata_and_imgs/hair/: MaskRenderVertexShader.vertexshader  PiecewiseStrand.cpp  PiecewiseStrand.h  PiecewiseStrands.cpp  PiecewiseStrands.h  XForm.h  cnpy.cpp  cnpy.h  util.h  vec.h
blend_hairs_convdata/: strands00014_00035_00010.convdata
blend_hairs_imgs/: strands00014_00035_00010_v0.exr  strands00014_00035_00010_v0.txt  strands00014_00035_00010_v0.vismap  strands00014_00035_00010_v1.exr  strands00014_00035_00010_v1.txt  strands00014_00035_00010_v1.vismap  strands00014_00035_00010_v2.exr  strands00014_00035_00010_v2.txt  strands00014_00035_00010_v2.vismap  strands00014_00035_00010_v3.exr  strands00014_00035_00010_v3.txt  strands00014_00035_00010_v3.vismap
body_model/: please purchase the model on turbosquid
cstrands/: cstrands00001.data  cstrands00002.data  cstrands00003.data  cstrands00004.data  cstrands00005.data  cstrands00006.data  cstrands00007.data  cstrands00008.data  cstrands00009.data  cstrands00010.data  cstrands00011.data  cstrands00012.data  cstrands00013.data  cstrands00014.data  cstrands00015.data  cstrands00016.data  cstrands00017.data  cstrands00018.data  cstrands00019.data  cstrands00020.data  cstrands00021.data  cstrands00022.data  cstrands00023.data  cstrands00024.data  cstrands00025.data  cstrands00026.data  cstrands00027.data  cstrands00028.data  cstrands00029.data  cstrands00030.data  cstrands00031.data  cstrands00032.data  cstrands00033.data  cstrands00034.data  cstrands00035.data  cstrands00036.data  cstrands00037.data  cstrands00038.data  cstrands00039.data  cstrands00040.data  (+303 more)
roots1024/: map_roots1024.data
